objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Vista_Bookings_Value__c</fullName>
        <formula>IF(
                OR(
                                ISPICKVAL(PricebookEntry.Product2.Product_Line__c,"New Market"),
                                ISPICKVAL(PricebookEntry.Product2.Product_Line__c,"Other"),
                                Opportunity.Barter_Contract__c 
                ),
                0,
                IF(
                                AND(
                                                ISPICKVAL(PricebookEntry.Product2.Revenue_Type__c,"Annual Recurring"),
                                                NOT(ISPICKVAL(PricebookEntry.Product2.Product_Family__c,"Onsite Solutions")),
NOT(ISPICKVAL(PricebookEntry.Product2.Product_Family__c,"Lanyon Events"))
                                ),
                                NBB_New_Account_New_Logo__c + NBB_Upsell__c + NBB_Cross_Sell__c,
                                IF(
                                                AND(
                                                                NOT(ISPICKVAL(PricebookEntry.Product2.Revenue_Type__c,"Annual Recurring")),
                                                                NOT(ISPICKVAL(PricebookEntry.Product2.Product_Family__c,"Onsite Solutions")),
NOT(ISPICKVAL(PricebookEntry.Product2.Product_Family__c,"Lanyon Events"))

                                                ),
                                                TotalPrice,
                                                IF(
                                                                AND(
Or(
                                                                          ISPICKVAL(PricebookEntry.Product2.Product_Family__c,"Lanyon Events"),
                                                                                ISPICKVAL(PricebookEntry.Product2.Product_Family__c,"Onsite Solutions")
),
                                                                                OR(
                                                                                                ISPICKVAL(PricebookEntry.Product2.Nature_of_Product__c,"Software" ),
                                                                                                ISPICKVAL(PricebookEntry.Product2.Nature_of_Product__c,"Lead Retrieval" )
                                                                                ),
                                                                                NOT(ISPICKVAL(PricebookEntry.Product2.Revenue_Type__c,"Non-Recurring"))
                                                                ),
                                                                NBB_New_Account_New_Logo__c + NBB_Upsell__c + NBB_Cross_Sell__c,
                                                                TotalPrice
                                                )
                                )
                )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vista Bookings Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Total_Price__c</fullName>
        <formula>TotalPrice * Opportunity.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMissingParentBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Parent Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Comp_Items_Hrs__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label># of Comp Items/Hrs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Items__c</fullName>
        <label># of Items/Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_OnArrival_Badges__c</fullName>
        <label># of OnArrival Badges</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>productRollsIntoBundle__c</fullName>
        <formula>PricebookEntry.Product2.rollupIntoBundleForEbs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>productRollsIntoBundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>totalRollupPrice__c</fullName>
        <description>Total rollup price populated by corresponding field with same field name on quote line.</description>
        <inlineHelpText>Total rollup price populated by corresponding field with same field name on quote line.</inlineHelpText>
        <label>Total Rollup Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>ATI_check_before_Closed_Won_II</fullName>
        <active>true</active>
        <description>This validation ensures that the ATI is filled on Account before an opportunity is Closed Won</description>
        <errorConditionFormula>AND( 
Opportunity.RecordType.DeveloperName&lt;&gt;"Renewal", /*Renewal opp will never be eligible for ATI as completed by AM*/ 
Opportunity.ATI_Check__c = false,                                   /* replaced Opportunity_N__r with Opportunity */
ISPICKVAL(Opportunity.Product__c,"Onsite Solutions"), 
OR(
ISPICKVAL(Product__c,"Adjustment Fees"),
ISPICKVAL(Product__c,"AT - Attendance"),
ISPICKVAL(Product__c,"AT - Check-in"),
ISPICKVAL(Product__c,"AT - leads"),
ISPICKVAL(Product__c,"AT - Travel &amp; Addtional Support"),
ISPICKVAL(Product__c,"AT - Universal Lead Capture"),
ISPICKVAL(Product__c,"Lead Capture"),
ISPICKVAL(Product__c,"OA360"),
ISPICKVAL(Product__c,"Lead Capture (Direct to exhibitor)")
),
OR( 
$UserRole.DeveloperName = "Sales_Manager_Event", 
$UserRole.DeveloperName = "DirectSalesEvent", 
$UserRole.DeveloperName = "PreSalesEvent", 
$UserRole.DeveloperName = "PreSalesTrainingEvent", 
$UserRole.DeveloperName = "PreSalesIndiaEvent", 
$UserRole.DeveloperName = "DirectSalesSurvey", 
$UserRole.DeveloperName = "PreSalesSurvey", 
$UserRole.DeveloperName = "PreSalesTrainingSurvey", 
$UserRole.DeveloperName = "PreSalesIndiaSurvey", 
$UserRole.DeveloperName = "Sales_Manager_CrowdCompass", 
$UserRole.DeveloperName = "Direct_Sales_CrowdCompass", 
$UserRole.DeveloperName = "Pre_Sales_CrowdCompass", 
$UserRole.DeveloperName = "PreSalesExternal", 
$UserRole.DeveloperName = "DirectSalesExternal", 
$UserRole.DeveloperName = "DirectSalesEnt", 
$UserRole.DeveloperName = "PreSalesEnt",
$UserRole.DeveloperName = "AM_Biz_Dev_AP",
$UserRole.DeveloperName = "AM_Biz_Dev_CS",
$UserRole.DeveloperName = "AM_CrowdCompass",
$UserRole.DeveloperName = "AMEnt",
$UserRole.DeveloperName = "AMEvent",
$UserRole.DeveloperName = "AM_Manager_Ent",
$UserRole.DeveloperName = "AM_Manager_Event",
$UserRole.DeveloperName = "AM_Pre_Sales_Event",
$UserRole.DeveloperName = "AMSurvey",
$UserRole.DeveloperName = "AM_TPP",
$UserRole.DeveloperName = "AM_Venue_Sourcing"
), 
OR(
ISPICKVAL(Opportunity.Parent_Upsell__c,"Primary"),
ISPICKVAL(Opportunity.Parent_Upsell__c,"Upsell")
), 
OR(ISPICKVAL(Opportunity.NBB_Renewal__c,"NBB"),
ISPICKVAL(Opportunity.NBB_Renewal__c,"Renewal")
),
ISPICKVAL(Opportunity.MYD_Deal__c,"First Year"), 
ISPICKVAL(Opportunity.StageName,"Closed Won"), 
$User.Validation_Bypass__c = False 
)</errorConditionFormula>
        <errorMessage>You cannot Closed Won an opportunity before filling up the Account Transition Information (this is due to Onsite Solution as Opp product)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_DG</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Product2.Name="DG-Customized",     /* ISPICKVAL(Feature__c replaced with Product2.Name */
ISBLANK(Notes__c),
$User.Validation_Bypass__c = False )</errorConditionFormula>
        <errorDisplayField>Notes__c</errorDisplayField>
        <errorMessage>Please update Notes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DG_Banner_Ad_City_Profile</fullName>
        <active>false</active>
        <description>THIS VALIDATION TO REMAIN DEACTIVATED in CVENT 2.0, DO NOT ACTIVATE THIS INCLUDING FOR ANY DATA MIGRATION CHECKLIST</description>
        <errorConditionFormula>AND(Product2.Name="DG-Banner Ad City Profile",  /* ISPICKVAL(Feature__c replaced with Product2.Name */ 
ISBLANK(City_Neighborhood__c ),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
NOT(CONTAINS($User.Username,"zmahmood@cvent.com.data"))

)</errorConditionFormula>
        <errorDisplayField>City_Neighborhood__c</errorDisplayField>
        <errorMessage>Please update City-Neighborhood field!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OnArrival_Badges</fullName>
        <active>true</active>
        <description>If this is chosen as feature set, then need to fill values in # OnArrival Badges field</description>
        <errorConditionFormula>AND(
Product2.Name="OnArrival Badges",
ISBLANK(of_OnArrival_Badges__c),
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com"))
)</errorConditionFormula>
        <errorMessage># of OnArrival Badges can't be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Offs</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
Product2.Name="Others",
ISBLANK(Notes__c),
$User.Validation_Bypass__c = False )</errorConditionFormula>
        <errorDisplayField>Notes__c</errorDisplayField>
        <errorMessage>Please update Notes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product</fullName>
        <active>false</active>
        <description>Product at Opportunity level and Feature Set should be same.</description>
        <errorConditionFormula>OR(
AND(
 ISPICKVAL(Product__c,"Event"),
 NOT(ISPICKVAL(Opportunity.Product__c ,"Event"))),
AND(
 ISPICKVAL(Product__c,"CrowdCompass"),
 NOT(OR(
     ISPICKVAL(Opportunity.Product__c ,"Event+CC"),
     ISPICKVAL(Opportunity.Product__c ,"CrowdCompass")))),
AND(
 ISPICKVAL(Product__c,"Survey"),
 NOT(ISPICKVAL(Opportunity.Product__c ,"Survey"))),
AND(
 ISPICKVAL(Product__c,"PSG"),
 NOT(ISPICKVAL(Opportunity.Product__c ,"Survey"))),
AND(
 ISPICKVAL(Product__c,"CSN - Supplier"),
 NOT(ISPICKVAL(Opportunity.Product__c ,"CSN"))),
AND(
 ISPICKVAL(Product__c,"PSG"),
 NOT(ISPICKVAL(Opportunity.Product__c ,"Survey")))
)</errorConditionFormula>
        <errorMessage>Product at Oppurtunity Level and Feature Set Level should be same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_Cant_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Product__c ,"")</errorConditionFormula>
        <errorMessage>Product can't be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_after_contract_implemented</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(ISCHANGED(Exchange_Rate__c)),
Opportunity.Contract_Implemented__c = TRUE,
NOT(OR($User.Id='00500000006yJS7',
$User.Id='00500000007CWN3',
$User.Id='005000000079DxB',
$User.Id='00500000007RZQA',
$User.Id='00500000007RNri',
$User.Id='00500000007RRq0',
$User.Id='00500000007C9cA',
$User.Id='005o0000002QzQs',
$User.Id='00500000007C9c0',
$User.Id='00500000007C9cK',
$User.Id='005o0000002DVyT',
$User.Id='005000000079DxC',
$User.Id='005o0000002RHRF',
$User.Id='005o0000001zHEs'
)),
!$Setup.ValidationsRules__c.BypassRules__c 
)</errorConditionFormula>
        <errorMessage>You can't modify/create a product once contract is implemented. Please contact contracts team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_mismatch_opp_feature_set</fullName>
        <active>false</active>
        <description>Product mismatch at Opportunity &amp; Feature set level</description>
        <errorConditionFormula>OR(
AND(
 Product_Family__c = "Event",                         /* old rule on RecordTypeId="0120000000097tn" */
 NOT(ISPICKVAL(Opportunity.Product__c,"Event"))),

AND(
 Product_Family__c = "Survey",                        /* old rule on RecordTypeId="0120000000097ts" */
 NOT(ISPICKVAL(Opportunity.Product__c,"Survey"))),

AND(
 Product_Family__c =  "CSN-Supplier Bundles",         /* old rule on RecordTypeId="0120000000097tx" */
 NOT(ISPICKVAL(Opportunity.Product__c ,"CSN"))),

AND(
 Product_Family__c = "PSG",                           /* old rule on RecordTypeId="0120000000097u2" */
 NOT(ISPICKVAL(Opportunity.Product__c ,"Survey")))
)</errorConditionFormula>
        <errorMessage>Product at opp. level &amp; feature set level should be same!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_Page</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
OR(
Product2.Name="Search Page Ad",
ISPICKVAL(Ad_Listing_To_Page__c,"Region page")
),
OR(
ISPICKVAL(Region__c,"Not Applicable"),
ISPICKVAL(Region__c,"")
)
)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region field cannot be Not Applicable or Blank for Search Page Ad/Region Page Ad. Please update the correct Region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_for_Directory_Index_Page</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
OR(ISPICKVAL(Region__c,"Africa"),ISPICKVAL(Region__c,"Asia"),
ISPICKVAL(Region__c,"Australia"),ISPICKVAL(Region__c,"Canada"),
ISPICKVAL(Region__c,"Caribbean"),ISPICKVAL(Region__c,"Central America"),
ISPICKVAL(Region__c,"Europe"),ISPICKVAL(Region__c,"Mexico"),
ISPICKVAL(Region__c,"South America"),ISPICKVAL(Region__c,"United States"),
ISPICKVAL(Region__c,"US MidWest"),ISPICKVAL(Region__c,"US NorthEast"),
ISPICKVAL(Region__c,"US SouthEast"),ISPICKVAL(Region__c,"US SouthWest"),
ISPICKVAL(Region__c,"US West")),OR(ISPICKVAL(Ad_Listing_To_Page__c,"Beach Destinations-Index Page"),ISPICKVAL(Ad_Listing_To_Page__c,"Conference Center-Index Page"),ISPICKVAL(Ad_Listing_To_Page__c,"Convention Center-Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"CVB-Index Page"),ISPICKVAL(Ad_Listing_To_Page__c,"Golf Destinations-Index Page"),ISPICKVAL(Ad_Listing_To_Page__c,"Mountain Destinations-Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"Resort &amp; Luxury Destination-Index Page")))</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region should be Not Applicable for this inventory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_for_Directory_Listing</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
ISPICKVAL(Region__c,"Not Applicable"),
OR(
ISPICKVAL(Ad_Listing_To_Page__c,"Beach Destinations-Region_Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"Conference Center-Region_Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"Convention Center-Region_Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"CVB-Region_Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"Golf Destinations-Region_Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"Mountain Destinations-Region_Index Page"),
ISPICKVAL(Ad_Listing_To_Page__c,"Resort &amp; Luxury Destination-Region_Index Page")
)
)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Region cannot be Not Applicable for this inventory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_End_Date</fullName>
        <active>true</active>
        <description>Start date and end date can't be left blank in CSN Bundle feature sets</description>
        <errorConditionFormula>AND(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
OR(
BEGINS(Product2.Name,"DG-"),                            /* BEGINS(TEXT(Feature__c) replaced by BEGINS(Product2.Name */
BEGINS(Product2.Name,"Search Page Ad"),                 /* BEGINS(TEXT(Feature__c) replaced by BEGINS(Product2.Name */
BEGINS(Product2.Name,"Brand Page"),                     /* BEGINS(TEXT(Feature__c) replaced by BEGINS(Product2.Name */
BEGINS(Product2.Name,"Email Newsletter-"),              /* BEGINS(TEXT(Feature__c) replaced by BEGINS(Product2.Name */
BEGINS(Product2.Name,"Custom DG Creative")),            /* BEGINS(TEXT(Feature__c) replaced by BEGINS(Product2.Name */ 
OR(ISBLANK(Start_Date__c),ISBLANK(End_Date__c)),
Product_Family__c = "CSN-Supplier Bundles",             /* old rule on RecordType.Id = '0120000000097tx' */ 
$User.ProfileId = '00e00000006qrD3'
)</errorConditionFormula>
        <errorMessage>Start Date OR End Date cannot be blank!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>US_State_Page</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Ad_Listing_To_Page__c,"US State Page"), 
ISPICKVAL(US_State__c,"Not Applicable")
)</errorConditionFormula>
        <errorDisplayField>US_State__c</errorDisplayField>
        <errorMessage>US State field cannot be Not Applicable for US State Page Ad. Please update the correct US State.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>number_of_Items_and_fees_cannot_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNULL(of_Items__c),of_Items__c=0),Per_Item_Fee__c&gt;0,
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")))</errorConditionFormula>
        <errorMessage>Please update # of Items/Per Item Fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>of_Comp_Items_Hrs_mandatory</fullName>
        <active>true</active>
        <description>field mandatory for Contract Implementation Team</description>
        <errorConditionFormula>AND
(
NOT(CONTAINS($User.Username,"deploymentuser@cvent.com")),
ISBLANK( of_Comp_Items_Hrs__c ),
$Profile.Id = "00e00000006qrD3",
NOT($User.Id = "005000000077iSP"),
NOT(ISCHANGED(Exchange_Rate__c)),
Product_Family__c &lt;&gt; "Onsite Solutions" /* this has been modified in sandbox as Finance CI team is not able to test this scenario*/
)</errorConditionFormula>
        <errorMessage>Please Enter A Value in # of Comp Items/Hrs</errorMessage>
    </validationRules>
</CustomObject>